typescript/checker/tests/conformance/parser/ecmascript5/Expressions/parserUnaryExpression3.ts.stderr
error: TS2406
 --> $DIR/tests/conformance/parser/ecmascript5/Expressions/parserUnaryExpression3.ts:1:3
  |
1 | ++[0];
  |   ^^^

